# SpectraPipe

./: .gitignore  .gitmodules  CONTRIBUTING.md  DATA_CONTRACTS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: ci.yml  release.yml
configs/: defaults.yaml
src/hsi_pipeline/: cli.py  cli_helpers.py  types.py
src/hsi_pipeline/adapters/: __init__.py  bbox_to_mask.py  coco_parser.py  via_parser.py  voc_parser.py
src/hsi_pipeline/dataset/: __init__.py  annotation_processor.py  runner.py
src/hsi_pipeline/export/: __init__.py  manager.py  npz_schema.py
src/hsi_pipeline/manifest/: __init__.py  parser.py
src/hsi_pipeline/metrics/: __init__.py  formatter.py  reader.py
src/hsi_pipeline/models/: mst_wrapper.py
tests/: conftest.py  test_annotation_processor.py  test_background_suppression.py  test_bbox_to_mask.py  test_clean_metrics.py  test_cli.py  test_cli_annotation.py  test_cli_ux.py  test_coco_parser.py  test_config.py  test_dataset_runner.py  test_export_manager.py  test_input_fitting.py  test_integration.py  test_manifest_parser.py  test_metrics_formatter.py  test_metrics_reader.py  test_npz_schema.py  test_optional_artifacts.py  test_orchestrator.py  test_reproducibility.py  test_roi_loader.py  test_separability.py  test_smoke.py  test_spectra_batch.py  test_spectra_exporter.py  test_spectra_extractor.py  test_spectra_loader.py  test_spectra_normalize.py  test_spectra_wavelengths.py  test_upscaling.py  test_us18_dataset.py  test_via_parser.py  test_voc_parser.py  test_wavelength_resolution.py
(+26 files in other folders)
